# stringview_span

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  span_examples.cppm  string_view_examples.cppm
